--- a/app/views/profile/profileHeader.scala.html
+++ b/app/views/profile/profileHeader.scala.html
@@ -1,5 +1,5 @@
 @(header: String, firstName: String, avatarUrl: String = "", showLinkBack: Boolean = false)(implicit messages: Messages)
-<div class="row">
+<div class="row row-no-padding">
     <div class="col-xs-12 col-md-12 big-margin-top">
         <div class="host-header">
             <header>
