--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -1,107 +1,113 @@
 @(event: models.Event,
+        eventDates: List[models.event.EventDate],
         metaData: Option[viewmodels.MetaData] = None,
         eventBoxes: Option[List[models.viewmodels.EventBox]] = None,
         shareUrl: String = "",
         isThisMyEvent: Boolean = false,
         eventLikeForm: play.twirl.api.Html = play.twirl.api.Html(""))(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie, messages: Messages)
 @import scala.collection.JavaConverters._
-@import customUtils.Helpers
-
-@rotateCss(min: Int, max: Int) = @{
-    val res = Helpers.randomBetween(min,max)
-    "-ms-transform: rotate(" + res + "deg);-webkit-transform: rotate(" + res + "deg);transform: rotate(" + res + "deg);"
-}
-
 
 @main(Messages("event.title", event.getName), metaData = metaData) {
 
-    <div class="container host-container">
-        <div class="row">
-            <div class="col-xs-12 col-md-9">
-                @defining(if(event.getOwnerProfile.getAvatarImage != null){routes.ImageController.userThumb(event.getOwnerProfile.getAvatarImage.getStoreId).url}else{""}) { avatarUrl: String =>
-                    @views.html.profile.profileHeader(event.getOwnerProfile.profileLinkName, event.getOwnerProfile.getOwner.firstName, avatarUrl, true)
-                }
-
-                <div class="row">
-                    <div class="col-xs-12 big-margin-top">
-                        @shared.flashmsg(flash)
-                        <h1 class="page-header">@event.getName</h1>
-                    </div>
-                    <div class="col-xs-12 col-md-4">
-                        <section>
-                            <article>
-                                @if(!event.getPreAmble.isEmpty) {
-                                    <p class="lead">@event.getPreAmble</p>
-                                }
-                                @if(!event.getMainBody.isEmpty) {
-                                    <div class="breadtext">@Html(event.getMainBody)</div>
-                                }
-                            </article>
-@*                            <article>
-                                @shared.grade(inputId = "event-grade", initialValue = recipe.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = recipe.getNrOfRatings)
-                                @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.getOwner.firstName, recipe.getLink).url)(request)
-                            </article>*@
-                        </section>
-                    </div>
-                    <div class="col-xs-12 col-md-8">
-
-                        @event.getMainImage match {
-                            case null => {  }
-                            case image: models.files.ContentFile => {
-                                @defining(event.getEventImages.asScala) { eventImages =>
-
-                                    <div id="recipe-carousel" data-ride="carousel" data-interval="4000" class="carousel slide hdc-carousel host-image-gallery">
-                                            <!-- Slider carousel items -->
-                                        <div class="carousel-inner">
-                                            <div class="active item set-height crop-height" data-slide-number="0">@shared.img(routes.ImageController.eventNormal(image.getStoreId).url, cssClass = "img-responsive")</div>
-                                            @if(eventImages.nonEmpty) {
-                                                @for((eventImage,i) <- eventImages.zipWithIndex) {
-                                                    <div class="item set-height crop-height" data-slide-number="@(i+1)">@shared.img(routes.ImageController.eventNormal(eventImage.getStoreId).url, cssClass = "img-responsive")</div>
-                                                }
-                                            }
-                                        </div>
-                                        <!-- Carousel nav controls -->
-                                        <a class="carousel-control left hidden-md hidden-lg" href="#event-carousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-                                        <a class="carousel-control right hidden-md hidden-lg" href="#event-carousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-                                    </div>
-
-                                    @if(eventImages.nonEmpty) {
-                                        <!-- Thumbnails, don't show responsive -->
-                                        <ul class="event-carousel-thumbs list-inline hidden-xs hidden-sm">
-                                            <li class="col-md-3">
-                                                <a id="carousel-selector-0">@shared.img(routes.ImageController.eventThumb(image.getStoreId).url, cssClass = "img-responsive polaroid", cssStyle = rotateCss(-8,8))</a>
-                                            </li>
-                                            @if(eventImages.nonEmpty) {
-                                                @for((eventImage,i) <- eventImages.zipWithIndex) {
-                                                    <li class="col-md-3"><a id="carousel-selector-@(i+1)">@shared.img(routes.ImageController.eventThumb(eventImage.getStoreId).url, cssClass = "img-responsive polaroid", cssStyle = rotateCss(-8,8))</a></li>
-                                                }
-                                            }
-                                        </ul>
-                                    }
-
-                                }
-                            }
-                        }
-
-
-                        <div class="col-xs-12 margin-top">
-                            @eventLikeForm
-                            @shared.fbShare(url = shareUrl)
-                        </div>
-                    </div>
-
-                    @if(isThisMyEvent){
-                        <div class="col-xs-12 big-margin-top">
-                            <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("event.button.edit")</a><br>
-                        </div>
+    <div class="container">
+        @defining(if(event.getOwnerProfile.getAvatarImage != null){routes.ImageController.userThumb(event.getOwnerProfile.getAvatarImage.getStoreId).url}else{""}) { avatarUrl: String =>
+            @views.html.profile.profileHeader(event.getOwnerProfile.profileLinkName, event.getOwnerProfile.getOwner.firstName, avatarUrl, true)
+        }
+        <div class="row row-no-padding">
+            <div class="col-xs-12">
+                <div class="event-image-wrapper">
+                @event.getMainImage match {
+                    case null => {
+                        @shared.img("images/campaign/campaign_header.jpg", cssClass = "img-responsive event-image")
                     }
+                    case image: models.files.ContentFile => {
+                        @shared.img(routes.ImageController.eventNormal(image.getStoreId).url, cssClass = "img-responsive event-image")
+                    }
+                }
                 </div>
             </div>
 
-                <!-- Banner -->
-            <div class="col-xs-12 col-md-3 col-banner">
-                @shared.banner()
+            <div class="col-xs-12 col-sm-6 event-overlay">
+                <h1 class="margin-top event-header">@event.getName</h1>
+                <hr>
+                <span>@Messages("event.price.header", event.getPrice)</span>
             </div>
+        </div>
+
+        <div class="row bg-color">
+            <div class="col-xs-12 col-md-3">
+                <ul class="event-date-list list-unstyled">
+                    @for(eventDate <- eventDates) {
+                        @defining(eventDate.getEventDateTime){ theDate =>
+                            <li>
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <div class="month">@customUtils.Helpers.formatDateGetMonthAsText(theDate, "long")</div>
+                                        <div class="day-of-month">@customUtils.Helpers.formatDateGetDayOfMonth(theDate)</div>
+                                        <div class="year">@customUtils.Helpers.formatDateGetYear(theDate)</div>
+                                    </div>
+                                    <div class="col-xs-6">
+                                        <div class="book-me pull-right"><button class="btn btn-orange btn-lg">@Messages("event.button.book")</button></div>
+                                    </div>
+                                </div>
+                            </li>
+                        }
+                    }
+                    <li><button class="btn btn-default btn-group-justified">@Messages("event.button.see-more-dates")</button><button class="btn btn-primary-flat btn-group-justified">@Messages("event.button.suggest-date")</button></li>
+                </ul>
+            </div>
+            <div class="col-xs-12 col-md-9 bg-color margin-top">
+            @if(!flash.isEmpty) {
+                @shared.flashmsg(flash)
+            }
+
+            @if(!event.getPreAmble.isEmpty && !event.getMainBody.isEmpty) {
+                <div class="col-xs-12">
+                    <section>
+                        <article>
+                            @if(!event.getPreAmble.isEmpty) {
+                                <p class="lead">@event.getPreAmble</p>
+                            }
+                            @if(!event.getMainBody.isEmpty) {
+                                <div class="breadtext">@Html(event.getMainBody)</div>
+                            }
+                        </article>
+                    </section>
+
+                    @*
+                    <article>
+                    @shared.grade(inputId = "event-grade", initialValue = recipe.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = recipe.getNrOfRatings)
+                    @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.getOwner.firstName, recipe.getLink).url)(request)
+                    </article>
+                    *@
+                </div>
+            }
+
+            @defining(event.getEventImages.asScala) { eventImages =>
+                @if(eventImages.nonEmpty) {
+                    <div class="row bg-color">
+                    @for(eventImage <- eventImages) {
+                        <div class="col-xs-4">
+                        @shared.img(routes.ImageController.eventNormal(eventImage.getStoreId).url, cssClass = "img-responsive")
+                        </div>
+                    }
+                    </div>
+                }
+            }
+            </div>
+        </div>
+
+        <div class="row bg-color">
+            <div class="col-xs-12 pull-right">
+                @eventLikeForm
+                @shared.fbShare(shareUrl)
+            </div>
+
+            @if(isThisMyEvent){
+                <div class="col-xs-12 big-margin-top">
+                    <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("event.button.edit")</a><br>
+                </div>
+            }
         </div>
     </div>
 }
