--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -26,28 +26,29 @@
                 }
                 </div>
             </div>
-
-            <div class="col-xs-12 col-sm-6 event-overlay">
-                <h1 class="margin-top event-header">@event.getName</h1>
-                <hr>
-                <span>@Messages("event.price.header", event.getPrice)</span>
+            <div class="col-xs-12 event-overlay">
+                @shared.priceCircle(event.getPrice match {case null => 0 case p => p })
             </div>
         </div>
 
         <div class="row bg-color">
-            <div class="col-xs-12 col-md-3">
+            <div class="col-xs-12 col-md-4 col-lg-3">
                 <ul class="event-date-list list-unstyled">
                     @for(eventDate <- eventDates) {
                         @defining(eventDate.getEventDateTime){ theDate =>
                             <li>
                                 <div class="row">
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-4">
                                         <div class="month">@customUtils.Helpers.formatDateGetMonthAsText(theDate, "long")</div>
                                         <div class="day-of-month">@customUtils.Helpers.formatDateGetDayOfMonth(theDate)</div>
                                         <div class="year">@customUtils.Helpers.formatDateGetYear(theDate)</div>
                                     </div>
-                                    <div class="col-xs-6">
-                                        <div class="book-me pull-right"><button class="btn btn-orange btn-lg">@Messages("event.button.book")</button></div>
+                                    <div class="col-xs-4 text-center">
+                                        <div>@Messages("event.list.time-header")</div>
+                                        <div class="time">@customUtils.Helpers.formatDateGetTime(theDate)</div>
+                                    </div>
+                                    <div class="col-xs-4">
+                                        <div class="book-me pull-right"><button class="btn btn-orange">@Messages("event.button.book")</button></div>
                                     </div>
                                 </div>
                             </li>
@@ -55,32 +56,40 @@
                     }
                     <li><button class="btn btn-default btn-group-justified">@Messages("event.button.see-more-dates")</button><button class="btn btn-primary-flat btn-group-justified">@Messages("event.button.suggest-date")</button></li>
                 </ul>
+
+                @eventLikeForm
+                @shared.fbShare(shareUrl)
+
+                @if(isThisMyEvent){
+                    <div class="col-xs-12 text-center margin-top">
+                        <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("event.button.edit")</a><br>
+                    </div>
+                }
             </div>
-            <div class="col-xs-12 col-md-9 bg-color margin-top">
+            <div class="col-xs-12 col-md-8 col-lg-9 bg-color margin-top">
             @if(!flash.isEmpty) {
-                @shared.flashmsg(flash)
+                <div class="col-xs-12">@shared.flashmsg(flash)</div>
             }
 
-            @if(!event.getPreAmble.isEmpty && !event.getMainBody.isEmpty) {
-                <div class="col-xs-12">
-                    <section>
-                        <article>
-                            @if(!event.getPreAmble.isEmpty) {
-                                <p class="lead">@event.getPreAmble</p>
-                            }
-                            @if(!event.getMainBody.isEmpty) {
-                                <div class="breadtext">@Html(event.getMainBody)</div>
-                            }
-                        </article>
-                    </section>
-
-                    @*
+            @if(!event.getPreAmble.isEmpty || !event.getMainBody.isEmpty || !event.getName.isEmpty) {
+                <section>
                     <article>
-                    @shared.grade(inputId = "event-grade", initialValue = recipe.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = recipe.getNrOfRatings)
-                    @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.getOwner.firstName, recipe.getLink).url)(request)
+                        <h1 class="event-header">@event.getName</h1>
+                        @if(!event.getPreAmble.isEmpty) {
+                            <blockquote><p>"@event.getPreAmble"</p><p><small>@event.getOwnerProfile.getOwner.getFullName</small></p></blockquote>
+                        }
+                        @if(!event.getMainBody.isEmpty) {
+                            <div class="breadtext">@Html(event.getMainBody)</div>
+                        }
                     </article>
-                    *@
-                </div>
+                </section>
+
+                @*
+                <article>
+                @shared.grade(inputId = "event-grade", initialValue = recipe.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = recipe.getNrOfRatings)
+                @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.getOwner.firstName, recipe.getLink).url)(request)
+                </article>
+                *@
             }
 
             @defining(event.getEventImages.asScala) { eventImages =>
@@ -95,19 +104,6 @@
                 }
             }
             </div>
-        </div>
-
-        <div class="row bg-color">
-            <div class="col-xs-12 pull-right">
-                @eventLikeForm
-                @shared.fbShare(shareUrl)
-            </div>
-
-            @if(isThisMyEvent){
-                <div class="col-xs-12 big-margin-top">
-                    <a href="@controllers.routes.EventPageController.edit(event.objectId)" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> @Messages("event.button.edit")</a><br>
-                </div>
-            }
         </div>
     </div>
 }
