Working on eventPage

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -771,7 +771,7 @@ input[type="reset"]:hover
   overflow: hidden;
   border-bottom:1px solid @hdc-light-orange;
 }
-.book-me {
+.select-date-wrap {
   margin-top:13px;
 }
 
