Working on eventPage

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -818,6 +818,10 @@ input[type="reset"]:hover
   font-size: 1.0em;
   margin-top:13px;
 }
+.event-date-list-result {
+  border-top: 1px solid @hdc-light-orange;
+  margin-top:15px;
+}
 .inline-date-selector .bootstrap-datetimepicker-widget table td.day {
   color: @hdc-black;
   border: 1px solid @hdc-orange;
