Working on eventPage

--- a/app/views/event/eventDateSelector.scala.html
+++ b/app/views/event/eventDateSelector.scala.html
@@ -7,6 +7,5 @@
     data-get-time-route="@{routes.EventPageController.getEventTimesForDateAJAX()}"
     class="inline-date-selector animated"
     style="display: none"></div>
-<hr class="hr-orange">
-<div id="event-date-list-result"></div>
+<div id="event-date-list-result" class="event-date-list-result"></div>
 <button id="event-date-list-suggest-date" class="btn btn-default btn-group-justified">@Messages("event.button.suggest-date")</button>
