--- a/app/views/shared/listFormErrors.scala.html
+++ b/app/views/shared/listFormErrors.scala.html
@@ -6,7 +6,7 @@
         @Messages("profile.form.unacceptedcontent")
         <ul>
             @if(form1.hasErrors){ @for(v <- form1.errors) { <li>@v.message</li> }}
-            @if(form2.get.hasErrors){ @for(v <- form2.get.errors) { <li>@v.message</li> }}
+            @if(form2.isDefined && form2.get.hasErrors){ @for(v <- form2.get.errors) { <li>@v.message</li> }}
         </ul>
     </div>
 }
