Working on eventPage

--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -45,7 +45,7 @@
                 @shared.fbShare(shareUrl)
             </div>
 
-            <div id="booking-form" class="col-xs-12 col-sm-4 bg-color margin-top clearfix hidden">
+            <div id="booking-form" class="col-xs-12 col-sm-4 bg-color clearfix hidden">
                 @views.html.event.eventBookForm(eventBookingForm)
             </div>
 
