--- a/app/views/event/eventBookForm.scala.html
+++ b/app/views/event/eventBookForm.scala.html
@@ -6,7 +6,7 @@
 }
 
 
-@b3.form(action=controllers.routes.EventPageController.addSubmit(), 'enctype -> "multipart/form-data"){
+@b3.form(action=controllers.routes.EventPageController.addBookingSubmit(), 'enctype -> "multipart/form-data"){
 
     @b3.static(Messages("event.book.chosen.date")){
         <span id="booking-chosen-date"></span>
@@ -22,6 +22,7 @@
 
     @helper.inputHidden(eventBookingForm("eventId"), 'class -> "event-uuid")
     @helper.inputHidden(eventBookingForm("eventDateId"), 'class -> "eventdate-uuid")
+    @helper.inputHidden(eventBookingForm("suggestedDate"), 'class -> "eventdate-suggestion")
     @b3.select(eventBookingForm("guests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.book.nr-of-guests.label"))
     @b3.textarea(eventBookingForm("comment"), '_label -> Messages("event.book.comment.label"))
     @b3.submit('class -> "btn btn-lg btn-orange"){ <span class="glyphicon glyphicon-book"></span> @Messages("event.book.submit") }
