Working on eventPage

--- a/app/views/admin/event/index.scala.html
+++ b/app/views/admin/event/index.scala.html
@@ -18,6 +18,12 @@
                 <a href="@controllers.admin.routes.AdminMealTypeController.add()" class="btn btn-primary">@Messages("admin.actions.add")</a>
                 <a href="@controllers.admin.routes.AdminMealTypeController.listAll()" class="btn btn-primary">@Messages("admin.actions.list")</a>
             </div>
+
+            <h3>@Messages("admin.alcohol-serving.index.header")</h3>
+            <div class="btn-group">
+                <a href="@controllers.admin.routes.AdminAlcoholServingController.add()" class="btn btn-primary">@Messages("admin.actions.add")</a>
+                <a href="@controllers.admin.routes.AdminAlcoholServingController.listAll()" class="btn btn-primary">@Messages("admin.actions.list")</a>
+            </div>
         </div>
     </div>
 
