--- a/app/views/admin/event/mealtype/add.scala.html
+++ b/app/views/admin/event/mealtype/add.scala.html
@@ -1,4 +1,4 @@
-@(tagForm: Form[models.formdata.MealTypeForm])(implicit flash: Flash, messages: Messages)
+@(tagForm: Form[models.formdata.EventPropertyForm])(implicit flash: Flash, messages: Messages)
 
 
 @mainedit(Messages("admin.title")){
