Working on eventPage

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -105,15 +105,15 @@ h1,h2,h3,h4,h5,h6{
   font-weight:normal;
 }
 h1{
-  font-size:26px;
+  font-size:36px;
 }
 h2{
-  font-size:20px;
+  font-size:26px;
 }
 h3{
   line-height:1.4em;
   color: @header-color-extra;
-  font-size:16px;
+  font-size:20px;
 }
 h4{
   font-size:15px;
@@ -759,6 +759,9 @@ input[type="reset"]:hover
 }
 .event-image {
   width:100%;
+}
+.event-more-images {
+  background-color: @hdc-gray;
 }
 
 .event-date-list {
