--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -27,13 +27,20 @@
                 },
                 body: {
                     required: true
+                },
+                price: {
+                    required: true,
+                    number: true,
+                    min: 0,
+                    max: 9999
                 }
             },
             messages: {
                 name: '@{Messages("event.edit.add.name.validation")}',
                 body: {
                     required: '@{Messages("event.edit.add.body.validation")}'
-                }
+                },
+                price: '@{Messages("event.edit.add.price.validation")}'
             }
         };
 
@@ -146,14 +153,12 @@
 
                             @helper.textarea(eventForm("body"), '_label -> Messages("event.edit.add.body"), '_error -> Messages("event.edit.add.body.validation"), 'class -> "richtext-extra")
                             <div class="margin-top">@Html(Messages("event.edit.add.body.help-text"))</div>
+
+                            @helper.textarea(eventForm("preamble"), '_label -> Messages("event.edit.add.preamble"), '_help -> Messages("event.edit.add.preamble.validation"), '_class -> "event-addedit-form-preamble")
+                            <div class="margin-top">@Html(Messages("event.edit.add.preamble.help-text"))</div>
                         </div>
 
                         <div class="step">
-                            @b3.checkbox(eventForm("eventOptionsForm.childFriendly"), '_text -> Messages("event.edit.add.child-friendly"))
-                            @b3.checkbox(eventForm("eventOptionsForm.handicapFriendly"), '_text -> Messages("event.edit.add.handicap-friendly"))
-                            @b3.checkbox(eventForm("eventOptionsForm.havePets"), '_text -> Messages("event.edit.add.have-pets"))
-                            @b3.checkbox(eventForm("eventOptionsForm.smokingAllowed"), '_text -> Messages("event.edit.add.smoking-allowed"))
-
                             @if(optionsAlcoholServings.isDefined) {
                                 @b3.select(eventForm("eventOptionsForm.alcoholServing"),
                                     optionsAlcoholServings.get,
@@ -161,19 +166,20 @@
                                     'value -> eventForm("eventOptionsForm.alcoholServing").value.getOrElse("")
                                 )
                             }
-
-                            @helper.textarea(eventForm("preamble"), '_label -> Messages("event.edit.add.preamble"), '_help -> Messages("event.edit.add.preamble.validation"), '_class -> "event-addedit-form-preamble")
-                            <div class="margin-top">@Html(Messages("event.edit.add.preamble.help-text"))</div>
+                            @b3.checkbox(eventForm("eventOptionsForm.childFriendly"), '_text -> Messages("event.edit.add.child-friendly"))
+                            @b3.checkbox(eventForm("eventOptionsForm.handicapFriendly"), '_text -> Messages("event.edit.add.handicap-friendly"))
+                            @b3.checkbox(eventForm("eventOptionsForm.havePets"), '_text -> Messages("event.edit.add.have-pets"))
+                            @b3.checkbox(eventForm("eventOptionsForm.smokingAllowed"), '_text -> Messages("event.edit.add.smoking-allowed"))
                         </div>
 
                         <div class="step">
-                            @helper.inputText(eventForm("price"), '_label -> Messages("event.edit.add.price"), '_help -> Messages("event.edit.add.price.validation"), '_error -> Messages("event.edit.add.price.validation"))
+                            @b3.text(eventForm("price"), '_label -> Messages("event.edit.add.price"), '_error -> Messages("event.edit.add.price.validation"))(inlineFC, messages)
                             <div class="margin-top">@Html(Messages("event.edit.add.price.help-text"))</div>
                         </div>
 
                         <div class="step">
-                            @b3.select(eventForm("minNrOfGuests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.edit.add.min-nr-of-guests.label"))
-                            @b3.select(eventForm("maxNrOfGuests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.edit.add.max-nr-of-guests.label"))
+                            @b3.select(eventForm("minNrOfGuests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.edit.add.min-nr-of-guests.label"))(inlineFC, messages)
+                            @b3.select(eventForm("maxNrOfGuests"), helper.options("1"->"1","2"->"2","3"->"3","4"->"4","5"->"5","6"->"6","7"->"7","8"->"8","9"->"9"), '_label -> Messages("event.edit.add.max-nr-of-guests.label"))(inlineFC, messages)
                             <div class="margin-top">@Html(Messages("event.edit.add.nr-of-guests.help-text"))</div>
                         </div>
 
